@@ -1,4 +1,7 @@
 class ContactsController < ApplicationController
+  before_filter :require_user
+  before_filter { |filter| filter.send(:set_current_tab, :contacts) }
+
   # GET /contacts
   # GET /contacts.xml
   def index
