@@ -1,0 +1,8 @@
+class PreferencesController < ApplicationController
+  before_filter :require_user, :set_current_tab
+  
+  #----------------------------------------------------------------------------
+  def index
+  end
+  
+end
