@@ -4,6 +4,5 @@ class Account < ActiveRecord::Base
   acts_as_paranoid
   validates_presence_of :name
   validates_uniqueness_of :name, :scope => :user_id
-  
-  attr_accessor :tags # stub
+
 end
