@@ -1,2 +1,3 @@
 class Campaign < ActiveRecord::Base
+  belongs_to :user
 end
