@@ -1,2 +1,3 @@
 class Contact < ActiveRecord::Base
+  belongs_to :user
 end
