@@ -1,2 +1,3 @@
 class Lead < ActiveRecord::Base
+  belongs_to :user
 end
