@@ -1,4 +1,6 @@
-<h1>Listing contacts</h1>
+<h4>Listing contacts</h4>
+
+Not implemented yet.
 
 <table>
   <tr>
