@@ -1,3 +1,0 @@
-<div id="footer">
-  Powered by <%= link_to "Fat Free CRM", home_path %> &copy; 2008 by Michael Dvorkin
-</div>
