@@ -1,0 +1,2 @@
+#footer
+  == Powered by #{link_to "Fat Free CRM", home_path} &copy; 2008 by Michael Dvorkin
