@@ -1,16 +1,0 @@
-<div id="header">
-  <div>
-    <% if current_user -%>
-      Logged in as <%= @current_user.username %>&nbsp; |
-      <%= link_to "Profile", profile_path %> |
-      <%= link_to "Logout", logout_path, :method => :delete %>
-    <% else -%>
-      <%= link_to "Login", login_path %> |
-      <%= link_to "Sign Up", signup_path %>
-    <% end -%>
-    <%# link_to "Help", "/" %>
-  </div>
-  <h3>
-    <%= link_to "Fat Free CRM", home_path %>
-  </h3>
-</div>
