@@ -1,19 +1,0 @@
-<div id="tabs">
-  <ul>
-    <% controller.tabs.each do |tab| -%>
-      <li><%= link_to(tab[:text], tab[:url], :class => tab[:active] ? "active" : "") %></li> 
-    <% end -%>
-  </ul>
-</div>
-
-<%= show_flash_if_any %>
-<table width="100%" cellpadding="0" cellspacing="0" class="two_column_layout">
-  <tr>
-    <td class="main" valign="top">
-      <%= yield %>
-    </td>
-    <td class="sidebar" valign="top">
-      <%= yield :sidebar or render :text => "...Sidebar contents is shown here..." %>
-    </td>
-  </tr>
-</table>
