@@ -1,0 +1,12 @@
+#tabs
+  %ul
+    - tabs.each do |tab|
+      %li
+        = link_to(tab[:text], tab[:url], :class => tab[:active] ? "active" : "")
+= show_flash_if_any
+%table{ :width => "100%", :height => "100%", :cellpadding => 0, :cellspacing => 0, :class => :two_column_layout }
+  %tr
+    %td{ :class => :main, :valign => :top }
+      = yield
+    %td{ :class => :sidebar, :valign => :top }
+      = yield(:sidebar) || render(:text => "...Sidebar contents is shown here...")
