@@ -1,2 +1,0 @@
-<%= show_flash_if_any %>
-<%= yield %>
