@@ -1,0 +1,2 @@
+= show_flash_if_any
+= yield
