@@ -1,28 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title><%= controller.controller_name %>: <%= controller.action_name %></title>
-
-  <%= stylesheet_link_tag "screen" %>
-  <stlyles>
-    <%= yield :styles -%>
-  </styles>
-
-  <%= javascript_include_tag :defaults, :cache => true %>
-  <script type="text/javascript">
-    <%= yield :javascript -%>
-  </script>
-</head>
-
-<body>
-  <%= render :partial => "layouts/header" %>
-  <% if tabless_layout? -%>
-    <%= render :partial => "layouts/tabless" %>
-  <% else -%>
-    <%= render :partial => "layouts/tabbed" %>
-    <%= render :partial => "layouts/footer" %>
-  <% end -%>
-  
-</body>
-</html>
