@@ -1,0 +1,20 @@
+!!!
+%html{ :xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => :en,  :lang => :en }
+  %head
+    %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
+    %title
+      = controller.controller_name + " : " + controller.action_name
+    = stylesheet_link_tag "screen"
+    %stlyles
+      = yield :styles
+    = javascript_include_tag :defaults, :cache => true
+    %script{ :type => "text/javascript" }
+      = yield :javascript
+
+  %body
+    = render :partial => "layouts/header"
+    - if tabless_layout?
+      = render :partial => "layouts/tabless"
+    - else
+      = render :partial => "layouts/tabbed"
+      = render :partial => "layouts/footer"
