@@ -1,4 +1,6 @@
-<h1>Listing leads</h1>
+<h4>Listing leads</h4>
+
+Not implemented yet.
 
 <table>
   <tr>
