@@ -1,0 +1,10 @@
+require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
+
+describe PreferencesController do
+
+  #Delete this example and add some real ones
+  it "should use PreferencesController" do
+    controller.should be_an_instance_of(PreferencesController)
+  end
+
+end
